added mobilenet stuff

--- a/flask/templates/datacollection.html
+++ b/flask/templates/datacollection.html
@@ -36,11 +36,11 @@
 
     <br><br>
 
-    <button type="button" onclick="saveEyes()">Save Eyes</button>
-    <button type="button" onclick="trainModel()">Train Model</button>
-    <button type="button" onclick="saveModel()">Save Model</button>
-    <input type="file" accept="application/json" id="eyeData" multiple onchange='openFile(event)'></input>
-    <button type="button" onclick="testModel()">test Model</button>
+<!--    <button type="button" onclick="saveEyes()">Save Eyes</button>-->
+<!--    <button type="button" onclick="trainModel()">Train Model</button>-->
+<!--    <button type="button" onclick="saveModel()">Save Model</button>-->
+<!--    <input type="file" accept="application/json" id="eyeData" multiple onchange='openFile(event)'></input>-->
+<!--    <button type="button" onclick="testModel()">test Model</button>-->
 
 
     <p>Prediction: </p> <p id="prediction"></p>
