collected a lot of data, trained a few good models

--- a/flask/templates/training.html
+++ b/flask/templates/training.html
@@ -23,9 +23,14 @@
 
 <div id="main">
     <button type="button" onclick="trainModel()">Train Model</button>
-    <button type="button" onclick="saveModel()">Save Model</button>
+    <button type="button" onclick="saveModel(eyeModel)">Save Model</button>
     <input type="file" accept="application/json" id="eyeData" multiple onchange='openFile(event)'></input>
     <button type="button" onclick="testModel()">test Model</button>
+    <br>
+
+    <button type="button" onclick="eyeData2tensor()">convert eyeData</button>
+    <button type="button" onclick="trainBoostedModel()">train Boosted</button>
+    <button type="button" onclick="saveModel(boostmodel)">Save Boost Model</button>
 
     <br>
 
