--- a/flask/templates/transfer.html
+++ b/flask/templates/transfer.html
@@ -9,6 +9,9 @@
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
 
 
+<!-- External regression library -->
+<script src="https://rawgit.com/chen0040/js-regression/master/build/jsregression.min.js"></script>
+
 <!-- Javascript specific to this page -->
 <script src="{{url_for('static', filename='ML.js')}}"></script>
 <script src="{{url_for('static', filename='fileIO.js')}}"></script>
