got wasm backend training for calibration working on the phone

--- a/flask/templates/transfer.html
+++ b/flask/templates/transfer.html
@@ -46,7 +46,7 @@
 
 
                 <canvas id="eyecache"></canvas>
-            <video autoplay muted playsinline id="video"  style="
+            <video hidden autoplay muted playsinline id="video"  style="
               -webkit-transform: scaleX(-1);
               transform: scaleX(-1);
               visibility: hidden;
