Fixed webcam to high output capture while maintaining speed, need to modify rest of pipeline

--- a/flask/templates/transfer.html
+++ b/flask/templates/transfer.html
@@ -43,9 +43,12 @@
     <button type="button" onclick="colorEyeData2tensor()">Convert colored eyes</button>
 
     <p id="trainingstate"></p>
+    <p id="videostats">Stats: </p>
 
 
-                <canvas id="eyecache"></canvas>
+    <canvas id="eyecache"></canvas>
+    <canvas hidden id="streamcanvas"></canvas>
+
             <video hidden autoplay muted playsinline id="video"  style="
               -webkit-transform: scaleX(-1);
               transform: scaleX(-1);
@@ -54,6 +57,7 @@
               height: auto;
               ">
             </video>
+
 
   </div>
 
