cleaned up website data loading

--- a/flask2/templates/main.html
+++ b/flask2/templates/main.html
@@ -7,7 +7,7 @@
 <!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm/dist/tf-backend-wasm.js"></script>-->
 
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/regression/2.0.1/regression.js"></script>-->
-<script src="https://rawgit.com/chen0040/js-regression/master/build/jsregression.min.js"></script>
+<!--<script src="https://rawgit.com/chen0040/js-regression/master/build/jsregression.min.js"></script>-->
 
 <script>
 
