--- a/flask2/templates/transfer.html
+++ b/flask2/templates/transfer.html
@@ -18,7 +18,7 @@
 
 <!-- Javascript for calibration -->
 <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-<!--<script src="{{url_for('static', filename='sketch.js')}}"></script>-->
+<script src="{{url_for('static', filename='sketch.js')}}"></script>
 
 <script>
     main();
