--- a/flask2/templates/main.html
+++ b/flask2/templates/main.html
@@ -9,8 +9,13 @@
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/regression/2.0.1/regression.js"></script>-->
 <!--<script src="https://rawgit.com/chen0040/js-regression/master/build/jsregression.min.js"></script>-->
 
-<script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+<script src="{{url_for('static', filename='ML.js')}}"></script>
+<script src="{{url_for('static', filename='transfer.js')}}"></script>
 
+
+<script>
+    main()
 </script>
 
 {% endblock %}
