--- a/flask2/templates/transfer.html
+++ b/flask2/templates/transfer.html
@@ -3,8 +3,8 @@
 {% block headextra %}
 <!-- Tensorflow core, model, and backend-->
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-<!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm/dist/tf-backend-wasm.js"></script>-->
 <!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm/dist/tf-backend-wasm.js"></script>
 <!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
 
