live testing of google mode at /test

--- a/flask2/templates/livetest.html
+++ b/flask2/templates/livetest.html
@@ -4,11 +4,15 @@
 <!-- Tensorflow core, model, and backend-->
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm/dist/tf-backend-wasm.js"></script>
 
 <!-- Javascript specific to this page -->
 <script src="{{url_for('static', filename='ML.js')}}"></script>
+<script src="{{url_for('static', filename='fileIO.js')}}"></script>
 <script src="{{url_for('static', filename='livetest.js')}}"></script>
+<script src="{{url_for('static', filename='collectioncolor.js')}}"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+<script src="{{url_for('static', filename='sketch.js')}}"></script>
 
 
 <script>
@@ -21,18 +25,21 @@
 {% block body %}
 
 <div id="main">
+    <p id="videostats">Stats: </p>
     <p id="prediction"></p>
     <br>
 
-    <canvas id="webcam"></canvas>
-    <video autoplay muted playsinline id="video"  style="
-      -webkit-transform: scaleX(-1);
-      transform: scaleX(-1);
-      visibility: hidden;
-      width: auto;
-      height: auto;
-      ">
-    </video>
+    <canvas hidden id="streamcanvas"></canvas>
+    <canvas id="eyecache"></canvas>
+
+    <video hidden autoplay muted playsinline id="video"  style="
+              -webkit-transform: scaleX(-1);
+              transform: scaleX(-1);
+              visibility: hidden;
+              width: auto;
+              height: auto;
+              ">
+            </video>
 
 </div>
 
