--- a/flask2/templates/main.html
+++ b/flask2/templates/main.html
@@ -24,6 +24,10 @@
 {% block body %}
 yaga
 
+<div >
+        <button id="regtoggle"  onclick="regr_class_toggle()" style="padding-bottom:20px"><h4>Regression</h4></button>
+</div>
+
 
 <div id="main">
     <div class="container">
