--- a/flask2/templates/transfer.html
+++ b/flask2/templates/transfer.html
@@ -34,10 +34,10 @@
 
 <div id="main">
 <!--    <button type="button" onclick="trainModel()">Train Model</button>-->
-    <button type="button" onclick="trainNatureModel()">Train Model</button>
-    <button type="button" onclick="saveModel(eyeModel)">Save Model</button>
-    <input type="file" accept="application/json" id="eyeData" multiple onchange='openFile(event)'></input>
-    <button type="button" onclick="testModel()">test Model</button>
+<!--    <button type="button" onclick="trainNatureModel()">Train Model</button>-->
+    <button type="button" onclick="saveModel(boostModel)">Save Fine-tuned Model</button>
+<!--    <input type="file" accept="application/json" id="eyeData" multiple onchange='openFile(event)'></input>-->
+<!--    <button type="button" onclick="testModel()">test Model</button>-->
 
     <br>
 
