--- a/archive/flask/templates/main.html
+++ b/archive/flask/templates/main.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 
 {% block headextra %}
-<!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 <!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>-->
 <!-- Adds the WASM backend to the global backend registry -->
 <!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm/dist/tf-backend-wasm.js"></script>-->
 
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/regression/2.0.1/regression.js"></script>-->
-<script src="https://rawgit.com/chen0040/js-regression/master/build/jsregression.min.js"></script>
+<!--<script src="https://rawgit.com/chen0040/js-regression/master/build/jsregression.min.js"></script>-->
+
+<script src="{{url_for('static', filename='fileIO.js')}}"></script>
 
 <script>
     var regression = new jsregression.LinearRegression();
@@ -25,7 +27,9 @@
 
 
 {% block body %}
+
 yaga
+
 
 
 <div id="main">
