--- a/flask2/templates/svr.html
+++ b/flask2/templates/svr.html
@@ -1,10 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block headextra %}
+
+<!-- Tensorflow core, model, and backend-->
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
+
+<!-- Javascript specific to this page -->
+<script src="{{url_for('static', filename='ML.js')}}"></script>
+<script src="{{url_for('static', filename='fileIO.js')}}"></script>
+<script src="{{url_for('static', filename='svr.js')}}"></script>
+<script src="{{url_for('static', filename='collectioncolor.js')}}"></script>
+<!--<script src="{{url_for('static', filename='livetest.js')}}"></script>-->
+
+<!--<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>-->
+<!--<script src="{{url_for('static', filename='sketch.js')}}"></script>-->
+
+
+<!--Other ML library-->
+<!--<script src="http://mlweb.loria.fr/ml.js"></script>-->
+<script src="{{url_for('static', filename='mlweb.js')}}"></script>
+
+<script>
+    main();
+</script>
+
+{% endblock %}
+
+
+{% block body %}
+
+<div id="main">
+
+    <canvas hidden id="eyecache"></canvas>
+
+    <div >
+        <button id="regtoggle"  onclick="regr_class_toggle()" style="vertical-align: middle; margin-bottom:10px; width:100vw;"><h4>Regression</h4></button>
+</div>
+
+
+    <video hidden autoplay muted playsinline id="video"  style="
+              -webkit-transform: scaleX(-1);
+              transform: scaleX(-1);
+              visibility: hidden;
+              width: auto;
+              height: auto;
+              ">
+            </video>
+
+</div>
+
+<div class="targetdot" style="left:50%; top:50%;"></div>
+
+{% endblock %}
