added new model (with face geometry inputs) to the pipeline. It's added to livetest, main testing, and svrtest

--- a/flask2/templates/datacollection.html
+++ b/flask2/templates/datacollection.html
@@ -9,8 +9,9 @@
 
 <script src="{{url_for('static', filename='ML.js')}}"></script>
 <script src="{{url_for('static', filename='mainTesting.js')}}"></script>
-<script src="{{url_for('static', filename='collectioncolor.js')}}"></script>
-<script src="{{url_for('static', filename='transfer.js')}}"></script>
+<!--<script src="{{url_for('static', filename='collectioncolor.js')}}"></script>-->
+<!--<script src="{{url_for('static', filename='transfer.js')}}"></script>-->
+<script src="{{url_for('static', filename='datacollect_p5_pipeline.js')}}"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 <script src="{{url_for('static', filename='datacollect_p5.js')}}"></script>
