Added expanded-center 3x3

--- a/flask2/templates/facemeshdemo.html
+++ b/flask2/templates/facemeshdemo.html
@@ -21,7 +21,7 @@
     <p id="RPY"></p>
     <canvas id="eyecache"></canvas>
 
-    <video hidden autoplay muted playsinline id="video"  style="
+    <video autoplay muted playsinline id="video"  style="
               -webkit-transform: scaleX(-1);
               transform: scaleX(-1);
               visibility: hidden;
