--- a/flask2/templates/main.html
+++ b/flask2/templates/main.html
@@ -36,6 +36,11 @@
 <input type="file" accept="application/json" id="eyeData" multiple onchange='openFile(event)'></input>
 yaga
 
+<!--<div class="predicdot" style="left:20px; top:40px"></div>-->
+
+<div class="onscreenregion" style="width: 100px; height:100px;"></div>
+<div class="onscreenregion" style="left: 10%; right:40%; top: 10%; bottom: 40%;"></div>
+                                   left: 75%; right:100%; top:25%; bottom: 75%;
 
 <div id="main">
     <div class="container">
