--- a/flask2/templates/livetest.html
+++ b/flask2/templates/livetest.html
@@ -26,7 +26,7 @@
 
 <div id="main">
 
-    <canvas hidden id="eyecache"></canvas>
+    <canvas id="eyecache"></canvas>
 
     <div >
         <button id="regtoggle"  onclick="regr_class_toggle()" style="vertical-align: middle; margin-bottom:10px; width:100vw;"><h4>Regression</h4></button>
