adjusted eval for the new regression head, need to add repeat but seems to work.

--- a/flask2/templates/eval.html
+++ b/flask2/templates/eval.html
@@ -8,12 +8,16 @@
 <!-- Javascript specific to this page -->
 <script src="{{url_for('static', filename='ML.js')}}"></script>
 <script src="{{url_for('static', filename='fileIO.js')}}"></script>
-<script src="{{url_for('static', filename='livetest.js')}}"></script>
+<script src="{{url_for('static', filename='svr.js')}}"></script>
 <script src="{{url_for('static', filename='collectioncolor.js')}}"></script>
+<!--<script src="{{url_for('static', filename='livetest.js')}}"></script>-->
+
 
 <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 <script src="{{url_for('static', filename='eval.js')}}"></script>
 
+
+<script src="{{url_for('static', filename='mlweb.js')}}"></script>
 
 <script>
     main();
