trying gamma boosting on the calib, also tried greyscale eye inputs

--- a/flask2/templates/main.html
+++ b/flask2/templates/main.html
@@ -56,6 +56,11 @@ yaga
         </video>
       </div>
       <div id="scatter-gl-container"></div>
+
+        <button type="button" onclick="greyscaleEyes()">Greyscale images</button>
+        <button type="button" onclick="getBaseline()">Test Baseline Model</button>
+        <br>
+
         <button type="button" onclick="saveEyes()">Save Eyes</button>
         <button type="button" onclick="trainOnCurrentData()">Train Regression Model</button>
         <button type="button" onclick="testOnCurrentData()">Test Model</button>
