added histogram code, added instructions to data collection + testing pipeline, added regression model saving code

--- a/flask2/templates/datacollection.html
+++ b/flask2/templates/datacollection.html
@@ -27,8 +27,8 @@
 
 {% block body %}
 
-<input type="file" accept="application/json" id="eyeData" multiple onchange='openFile(event)'></input>
-yaga
+<!--<input type="file" accept="application/json" id="eyeData" multiple onchange='openFile(event)'></input>-->
+<!--yaga-->
 
 
 <div id="main">
