--- a/flask2/templates/svr.html
+++ b/flask2/templates/svr.html
@@ -32,7 +32,7 @@
     <canvas hidden id="eyecache"></canvas>
 
     <div >
-        <button id="regtoggle"  class="widebutton" onclick="regr_class_toggle()" style="vertical-align: middle; margin-bottom:10px; width:100vw;"><h4>Regression</h4></button>
+        <button id="regtoggle"  class="widebutton" onclick="regr_class_toggle()" style="vertical-align: middle; margin-bottom:10px; background:#2196F3; width:100vw;"><h4>Classification</h4></button>
 </div>
 
 
