fixed the prediction hiding step

--- a/flask2/templates/zoo/1.html
+++ b/flask2/templates/zoo/1.html
@@ -47,6 +47,6 @@
 
 </div>
 
-<!--<div class="targetdot" style="left:50%; top:50%;"></div>-->
+<div class="targetdot" style="left:50%; top:50%;"></div>
 
 {% endblock %}
