--- a/flask2/templates/zoo.html
+++ b/flask2/templates/zoo.html
@@ -28,87 +28,106 @@
 </script>
 
 
+
+
+
 <style>
-    .top_notif_deselected {
-        margin: 0;
-
-        left: 2%;
-        right: 2%;
-        height: 5%;
-        top: 2%;
-
-        background-color: #dcdcdcaa;
-        border-radius: 15px;
-        position:fixed;
-        backdrop-filter: blur(4px);
-
-        animation: getSmaller 1s;
+    :root {
+        --maxheight: 15%;
     }
 
     @keyframes getSmaller {
         from {
-            left: 0%;
-            right: 0%;
-            top: 0%;
-            height: 8%;
+            left: 1%;
+            right: 1%;
+            top: 1%;
+            height: var(--maxheight);
+            background-color: #dcdcdcdd;
+            font-size: 400%;
         }
 
         to {
-            left: 2%;
-            right: 2%;
-            height: 5%;
-            top: 2%;
+            background-color: #dcdcdcaa;
+
         }
-    }
-
-
-    .top_notif_selected {
-        margin: 0;
-
-        left: 0%;
-        right: 0%;
-        top: 0%;
-        height: 8%;
-
-        background-color: #dcdcdcaa;
-        border-radius: 15px;
-        position:fixed;
-        backdrop-filter: blur(4px);
-
-        animation: getBigger 1s;
     }
 
     @keyframes getBigger {
         from {
             left: 2%;
             right: 2%;
-            top: 2%;
+            top: 1%;
             height: 5%;
+            background-color: #dcdcdcaa;
+            font-size: 300%;
         }
 
         to {
-            left: 0%;
-            right: 0%;
-            top: 0%;
-            height: 8%;
+            height: var(--maxheight);
         }
     }
 
-
-    .top_notif {
+    .top_notif_deselected {
         margin: 0;
+        padding: 2%;
 
         left: 2%;
         right: 2%;
         height: 5%;
-        top: 2%;
+        top: 1%;
+
+        font-size: 300% !important;
 
         background-color: #dcdcdcaa;
         border-radius: 15px;
         position:fixed;
         backdrop-filter: blur(4px);
+        -webkit-backdrop-filter: blur(4px);
 
-        animation: slideintop 1.5s;
+        animation: getSmaller 1s;
+    }
+
+    .top_notif_selected {
+        margin: 0;
+        padding: 2%;
+
+        left: 1%;
+        right: 1%;
+        top: 1%;
+        height: var(--maxheight);
+
+        font-size: 400% !important;
+
+        background-color: #dcdcdcee;
+        border-radius: 15px;
+        position:fixed;
+        backdrop-filter: blur(4px);
+        -webkit-backdrop-filter: blur(4px);
+        overflow: hidden;
+
+        animation-iteration-count: infinite;
+        animation: getBigger 1s;
+    }
+
+
+    .top_notif {
+        margin: 0;
+        padding: 2%;
+
+        left: 2%;
+        right: 2%;
+        height: 5%;
+        top: 1%;
+
+        font-size: 300% !important;
+
+        background-color: #dcdcdcaa;
+        border-radius: 15px;
+        position:fixed;
+        backdrop-filter: blur(4px);
+        -webkit-backdrop-filter: blur(4px);
+
+        animation: slideintop 1s;
     }
 
 
@@ -117,15 +136,6 @@
             top: -10%;
         }
 
-        to {
-            top: 2%;
-        }
-    }
-
-
-    p {
-      animation-duration: 3s;
-      animation-name: slidein;
     }
 
 
