added images to instructions and fixed some formatting, added eval results saving with date and some other info, and a display page at /results

--- a/flask2/templates/livetest.html
+++ b/flask2/templates/livetest.html
@@ -28,9 +28,7 @@
 
     <canvas id="eyecache"></canvas>
 
-    <div >
-        <button id="regtoggle"  onclick="regr_class_toggle()" style="vertical-align: middle; margin-bottom:10px; width:100vw;"><h4>Regression</h4></button>
-</div>
+        <button hidden id="regtoggle"  onclick="regr_class_toggle()" style="vertical-align: middle; margin-bottom:10px; width:100vw;"><h4>Regression</h4></button>
 
 
     <video hidden autoplay muted playsinline id="video"  style="
