--- a/flask2/templates/facemeshdemo.html
+++ b/flask2/templates/facemeshdemo.html
@@ -20,6 +20,7 @@
 <div id="main">
     <p id="RPY"></p>
     <canvas id="eyecache"></canvas>
+    <canvas id="facecanvas"></canvas>
 
     <video autoplay muted playsinline id="video"  style="
               -webkit-transform: scaleX(-1);
