adding instructions to main page, fixed eval page not saving or saving too much

--- a/flask2/templates/base.html
+++ b/flask2/templates/base.html
@@ -60,13 +60,18 @@
         text-align: center;
     }
 
+    hr {
+        background-color:#ccc;
+        height:1px;
+        border:none;
+    }
 
     </style>
 
     {% block headextra %}
     {% endblock %}
 </head>
-<body style="background-color:lightblue;">
+<body style="background-color:aliceblue; font-family: Verdana, sans-serif;">
 {% block body %}
 
 
