--- a/flask2/templates/results.html
+++ b/flask2/templates/results.html
@@ -2,7 +2,24 @@
 
 {% block headextra %}
 
+<script src="{{url_for('static', filename='fileIO.js')}}"></script>
 <script>
+    function clearResults(){
+        a = confirm("Clicking OK will clear ALL trials of your evaluation data! Only do this if there's been an error or you've already exported the data.");
+        if (a){
+            console.log("cleared eval from localstorage");
+            localStorage['eval'] = undefined;
+        }
+    }
+
+    function checkDownloadResults(){
+        if (localStorage['eval'] == "undefined"){
+             alert("No eval results to download");
+        } else {
+            downloadResults()
+        }
+    }
+
     document.addEventListener("DOMContentLoaded", function(event) {
         if (localStorage['eval'] == undefined){
             tmp = document.createElement("div");
@@ -28,7 +45,7 @@
             tmp = document.createElement("div");
 
             // Header
-            tmp.innerHTML += "<h2>GAZEL Evaluation Trial #" + ind + "</h2>";
+            tmp.innerHTML += "<h2>GAZEL Evaluation Trial #" + (ind+1) + "</h2>";
 
             // Date
             tmp.innerHTML += "Time Captured: &emsp;" + Date(dateInMillis) + "<br>"
@@ -43,8 +60,8 @@
             norm_errsY = divideAll(errsY, screenH);
 
 
-            tmp.innerHTML += "Errors X: &emsp;" + norm_errsX + "<br>";
-            tmp.innerHTML += "Errors Y: &emsp;" + norm_errsY + "<br>";
+            // tmp.innerHTML += "Errors X: &emsp;" + norm_errsX + "<br>";
+            // tmp.innerHTML += "Errors Y: &emsp;" + norm_errsY + "<br>";
 
             roundedNormedErrors = [Number(average(norm_errsX).toFixed(2)), Number(average(norm_errsY).toFixed(2))]
 
@@ -62,7 +79,10 @@
 
 
 {% block body %}
-
-
-
+<div>
+<!--    <button onclick="checkDownloadResults()" style="height:40px;">Download results</button>-->
+    <button onclick="checkDownloadResults()" style="height:40px;">Download results</button>
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+    <button onclick="clearResults()" style="height:20px;background-color:lightcoral;">Clear results</button>
+</div>
 {% endblock %}
