improved eval display messages and such

--- a/flask2/templates/results.html
+++ b/flask2/templates/results.html
@@ -9,6 +9,7 @@
         if (a){
             console.log("cleared eval from localstorage");
             localStorage['eval'] = undefined;
+            location.reload();
         }
     }
 
