Fixed some instructions. Goodnight!

--- a/flask2/templates/main.html
+++ b/flask2/templates/main.html
@@ -160,8 +160,10 @@
         </h2>
         <ul>
             <li>You should be using a <b>smartphone in portrait mode (vertical)</b> to do this study. It is eye tracking on smartphones, after all.</li>
+            <li>The data collection and evaluation pages should trigger a "Do you want to let this page use your camera" warning. If you don't see this popup or you tap and nothing starts, then make sure you enable camera access for your browser (Safari/Chrome, etc.)</li>
             <li>Please make sure that you're <b>not in an incognito tab</b>, or else we won't be able to save your personalized model.</li>
             <li>Make sure that you're in a <b>well-lit area</b>. If you can read comfortably, the lighting is fine.</li>
+            <li>If you have any questions, or feedback on the interface or experience, please let us know!</li>
         </ul>
 
         <h2>
