--- a/flask2/templates/zoo.html
+++ b/flask2/templates/zoo.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block headextra %}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Tensorflow core, model, and backend-->
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
@@ -32,6 +33,7 @@
 
 
 <style>
+
     :root {
         --maxheight: 15%;
     }
