changed to 2 per row, added filters

--- a/flask2/templates/zoo.html
+++ b/flask2/templates/zoo.html
@@ -142,14 +142,15 @@
 </style>
 
 
-<!-- CSS for Image Gallery interaction -->
 <style>
     .photogallery {
-        width: 32.333%;
+        /*width: 32.333%;*/
+        width: 49%;
         margin: 0.5%;
         margin-bottom: 0.25%;
         object-fit: contain;
         outline: none;
+        position: relative;
 
         top: 0px;
         left: 0px;
@@ -160,7 +161,8 @@
     }
 
     .photogallery:focus {
-        width: 32.333%;
+        /*width: 32.333%;*/
+        width: 49%;
         margin: 0.5%;
         margin-bottom: 0.25%;
         object-fit: contain;
@@ -178,8 +180,15 @@
         transform: scale(1.2);
     }
 
+    .galleryContainer {
+        line-height: 0px;
+        align-item: center;
+        position: relative;
+    }
+
 
 </style>
+<!-- CSS for Image Gallery interaction -->
 
 
 
